# evmone

./: CMakeLists.txt
cmake/Hunter/: config.cmake  init.cmake
lib/evmone/: analysis.cpp  analysis.hpp  execution.cpp  instructions.cpp
test/: CMakeLists.txt
test/fuzzer/: CMakeLists.txt  fuzzer.cpp
test/unittests/: analysis_test.cpp  evm_calls_test.cpp  evm_fixture.hpp  evm_test.cpp  execution_test.cpp
test/utils/: bytecode.hpp  dump.cpp  host_mock.hpp
